@@ -2,6 +2,15 @@
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*calculate-install-2.2.0.0_p20100901 (01 Sep 2010)
+*calculate-install-2.2.0.0_p20100826-r3 (01 Sep 2010)
+
+  01 Sep 2010; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
+  -calculate-install-2.2.0.0_p20100826-r2.ebuild,
+  +calculate-install-2.2.0.0_p20100826-r3.ebuild,
+  +calculate-install-2.2.0.0_p20100901.ebuild:
+  Daily update.
+
 *calculate-install-2.2.0.0_p20100826-r2 (01 Sep 2010)
 
   01 Sep 2010; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
