@@ -2,6 +2,13 @@
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*calculate-install-gui-2.2.0.0_p20100830-r1 (01 Sep 2010)
+
+  01 Sep 2010; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
+  -calculate-install-gui-2.2.0.0_p20100830.ebuild,
+  +calculate-install-gui-2.2.0.0_p20100830-r1.ebuild:
+  Add work this ebuild with calculate-install from 01 sep.
+
 *calculate-install-gui-2.2.0.0_p20100830 (30 Aug 2010)
 
   30 Aug 2010; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
